--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.0",
+    "celery[redis]>=5.5.3",
     "fastapi[standard]>=0.119.0",
     "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
