--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     env_file:
       - .env
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
     restart: unless-stopped
   redis:
     image: redis:latest
@@ -40,5 +40,5 @@ services:
       - redis
       - postgres
 volumes:
-  postgres-data:
+  postgres_data:
   redis_data:
